force-app/main/default/objects/InfoKiosk_Alert__c/InfoKiosk_Alert__c.object-meta.xml
<CustomObject>
    <label>InfoKiosk Alert</label>
    <nameField>
        <displayFormat>Alert-{0000}</displayFormat>
        <label>Email Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InfoKiosk Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>