force-app/main/default/objects/InfoKiosk_Alert__c/fields/All_Changes__c.field-meta.xml
<CustomField>
    <fullName>All_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Changes</label>
    <type>Checkbox</type>
</CustomField>