force-app/main/default/objects/InfoKiosk_Alert__c/fields/Anything_changes__c.field-meta.xml
<CustomField>
    <fullName>Anything_changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anything changes</label>
    <type>Checkbox</type>
</CustomField>