force-app/main/default/objects/InfoKiosk_Alert__c/fields/changes_an_item_appears_in_following_reg__c.field-meta.xml
<CustomField>
    <fullName>changes_an_item_appears_in_following_reg__c</fullName>
    <label>Select Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>SW</fullName>
            </value>
            <value>
                <fullName>OTHER-DE</fullName>
            </value>
            <value>
                <fullName>AUSTRIA</fullName>
            </value>
            <value>
                <fullName>SWITZERLAND</fullName>
            </value>
            <value>
                <fullName>LUXEMBOURG</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Rhine-Main</fullName>
                <isActive>false</isActive>
                <label>Rhine-Main</label>
            </value>
            <value>
                <fullName>Seefeld</fullName>
                <isActive>false</isActive>
                <label>Seefeld</label>
            </value>
            <value>
                <fullName>South-East</fullName>
                <isActive>false</isActive>
                <label>South-East</label>
            </value>
            <value>
                <fullName>South-West</fullName>
                <isActive>false</isActive>
                <label>South-West</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>