force-app/main/default/objects/InfoKiosk_Alert__c/fields/Enter_Internal_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Enter_Internal_Email_Addresses__c</fullName>
    <label>Enter Internal Email Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>