force-app/main/default/objects/InfoKiosk_Alert__c/fields/Existing_items_are_modified__c.field-meta.xml
<CustomField>
    <fullName>Existing_items_are_modified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing items are modified</label>
    <type>Checkbox</type>
</CustomField>