force-app/main/default/objects/InfoKiosk_Alert__c/fields/External_Stakeholder_Email_addresses__c.field-meta.xml
<CustomField>
    <fullName>External_Stakeholder_Email_addresses__c</fullName>
    <inlineHelpText>Enter external stakeholder email address separated by each email address with ;</inlineHelpText>
    <label>External Stakeholder Email addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>