force-app/main/default/objects/InfoKiosk_Alert__c/fields/Items_are_deleted__c.field-meta.xml
<CustomField>
    <fullName>Items_are_deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Items are deleted</label>
    <type>Checkbox</type>
</CustomField>