force-app/main/default/objects/InfoKiosk_Alert__c/fields/New_items_are_added__c.field-meta.xml
<CustomField>
    <fullName>New_items_are_added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New items are added</label>
    <type>Checkbox</type>
</CustomField>