force-app/main/default/objects/InfoKiosk_Alert__c/fields/Select_Location__c.field-meta.xml
<CustomField>
    <fullName>Select_Location__c</fullName>
    <label>Select Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aberdeen</fullName>
                <isActive>false</isActive>
                <label>Aberdeen</label>
            </value>
            <value>
                <fullName>Altmannshofen Shell Depot</fullName>
            </value>
            <value>
                <fullName>Andernach Dötsch Depot</fullName>
            </value>
            <value>
                <fullName>Aschaffenburg Baywa Depot</fullName>
            </value>
            <value>
                <fullName>Augsburg Präg depot</fullName>
            </value>
            <value>
                <fullName>Avonmouth</fullName>
                <isActive>false</isActive>
                <label>Avonmouth</label>
            </value>
            <value>
                <fullName>Bendorf Oiltanking Depot</fullName>
            </value>
            <value>
                <fullName>Berlin Oiltanking Depot</fullName>
            </value>
            <value>
                <fullName>Berlin Unitank depot</fullName>
            </value>
            <value>
                <fullName>Bertrange</fullName>
            </value>
            <value>
                <fullName>Birmingham Airport</fullName>
                <isActive>false</isActive>
                <label>Birmingham Airport</label>
            </value>
            <value>
                <fullName>Birsfdn Rhytank depot</fullName>
            </value>
            <value>
                <fullName>Birsfdn Varo depot</fullName>
            </value>
            <value>
                <fullName>Bramhall</fullName>
                <isActive>false</isActive>
                <label>Bramhall</label>
            </value>
            <value>
                <fullName>Braunschwg Varo depot</fullName>
            </value>
            <value>
                <fullName>Bremen HGM Depot</fullName>
            </value>
            <value>
                <fullName>Shell/OMV Burghausen</fullName>
                <label>Burghausen OMV Depot</label>
            </value>
            <value>
                <fullName>Clydebank</fullName>
                <isActive>false</isActive>
                <label>Clydebank</label>
            </value>
            <value>
                <fullName>Collombey Tamoil depot</fullName>
            </value>
            <value>
                <fullName>Cressier Varo depot</fullName>
            </value>
            <value>
                <fullName>Cunnersdorf Tabeg Depot</fullName>
            </value>
            <value>
                <fullName>Dortmund-Lünen Varo Depot</fullName>
            </value>
            <value>
                <fullName>Duisburg Tanquid</fullName>
                <label>Duisburg Tanquid Depot</label>
            </value>
            <value>
                <fullName>Duisburg Total Depot</fullName>
            </value>
            <value>
                <fullName>Duisburg Varo Depot</fullName>
            </value>
            <value>
                <fullName>Emleben Unitank depot</fullName>
            </value>
            <value>
                <fullName>Erlangen Varo Depot</fullName>
            </value>
            <value>
                <fullName>Essen UTG Depot</fullName>
            </value>
            <value>
                <fullName>Esso West London</fullName>
                <isActive>false</isActive>
                <label>Esso West London</label>
            </value>
            <value>
                <fullName>Shell/OMV Feldkirchen</fullName>
                <label>Feldkirchen OMV Depot</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>