force-app/main/default/objects/InfoKiosk_Alert__c/fields/Send_notification_immediately__c.field-meta.xml
<CustomField>
    <fullName>Send_notification_immediately__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send notification immediately</label>
    <type>Checkbox</type>
</CustomField>