force-app/main/default/objects/InfoKiosk_Alert__c/fields/Signature_of_the_emails__c.field-meta.xml
<CustomField>
    <fullName>Signature_of_the_emails__c</fullName>
    <label>Signature of the emails</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>