force-app/main/default/objects/InfoKiosk_Alert__c/fields/Someone_changes_an_item_created_by_me__c.field-meta.xml
<CustomField>
    <fullName>Someone_changes_an_item_created_by_me__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Someone changes an item created by me</label>
    <type>Checkbox</type>
</CustomField>