force-app/main/default/objects/InfoKiosk_Alert__c/fields/Someone_changes_item_last_modified_by_me__c.field-meta.xml
<CustomField>
    <fullName>Someone_changes_item_last_modified_by_me__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Someone changes item last modified by me</label>
    <type>Checkbox</type>
</CustomField>