force-app/main/default/objects/InfoKiosk_Alert__c/fields/Someone_else_changes_an_item__c.field-meta.xml
<CustomField>
    <fullName>Someone_else_changes_an_item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Someone else changes an item</label>
    <type>Checkbox</type>
</CustomField>