force-app/main/default/objects/InfoKiosk_Alert__c/fields/User_Selection__c.field-meta.xml
<CustomField>
    <fullName>User_Selection__c</fullName>
    <label>User Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Changes</fullName>
            </value>
            <value>
                <fullName>New items are added</fullName>
            </value>
            <value>
                <fullName>Existing items are modified</fullName>
            </value>
            <value>
                <fullName>Items are deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>