force-app/main/default/objects/InfoKiosk_Alert__c/validationRules/Validation_on_Alert_Action.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Alert_Action</fullName>
    <active>true</active>
    <description>Validation on Action Send notification immediately</description>
    <errorConditionFormula>Send_notification_immediately__c = FALSE</errorConditionFormula>
    <errorDisplayField>Send_notification_immediately__c</errorDisplayField>
    <errorMessage>Please check Action</errorMessage>
</ValidationRule>