force-app/main/default/objects/InfoKiosk_Alert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>All_Changes__c</columns>
    <columns>Select_Location__c</columns>
    <columns>Select_Products__c</columns>
    <columns>Enter_Internal_Email_Addresses__c</columns>
    <columns>External_Stakeholder_Email_addresses__c</columns>
    <columns>Send_notification_immediately__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>